# metadata_investigation

./: .gitignore  .gitmodules  CLAUDE.md  README.md  agent.md  flake.nix  pyproject.toml
abstract_meta_schemas/: README.md
abstract_meta_schemas/docs/: architecture.md
abstract_meta_schemas/mappings/: flattening.yaml
abstract_meta_schemas/profiles/: data_catalog.profile.yaml  dataharmonizer.profile.yaml
abstract_meta_schemas/schemas/: canonical.linkml.yaml
abstract_meta_schemas/terminology/: README.md  biology_terms.tsv  experiment_terms.tsv  labware_terms.tsv  process_terms.tsv
docs/: dataharmonizer-compatibility.md  schema-optimization.md
examples/outdated/: 20260225_KM_microbial_templates_schema_v2.2.0.json
investigation/: README.md  agent.md
investigation/docs/: dataharmonizer-compatibility.md
investigation/plan/observations/datacatalog/: plates.md
plan/: containers.md  initial.md  questions.md
scripts/: legacy_schema_to_linkml_yaml.py
